--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,15 @@
 :root {
 	--bg-clr: #475569;
 	--white-clr: #fff;
+	--todo-list-bg-clr: #f1f5f9;
+	--todo-list-clr: #334155;
+	--todo-form-btn-clr: #0891b2;
+	--todo-form-hover-btn-clr: #0e7490;
+}
+
+* {
+	margin: 0;
+	padding: 0;
 }
 
 html {
@@ -14,5 +23,16 @@ body {
 	background-color: var(--bg-clr);
 	color: var(--white-clr);
 	font-family: 'Raleway', sans-serif;
-	font-size: 2rem;
+	font-size: 1.6rem;
+}
+
+.flex-wrapper {
+	display: flex;
+}
+
+.App {
+	min-height: 100vh;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
