--- a/src/components/todo-item/TodoItem.css
+++ b/src/components/todo-item/TodoItem.css
@@ -1,7 +1,7 @@
 .todo-item {
 	background-color: var(--todo-list-bg-clr);
 	color: var(--todo-list-clr);
-	padding: 1rem 1.5rem;
+	padding: 1rem 1.5rem 1rem 1.5rem;
 	border-radius: 1rem;
 	justify-content: space-between;
 	align-items: center;
@@ -17,6 +17,7 @@
 	-webkit-box-orient: vertical;
 	overflow: hidden;
 	-webkit-line-clamp: 2;
+	padding-right: 1rem;
 }
 .todo-icon {
 	font-size: 2rem;
