--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ body {
 .todo-wrapper {
 	height: 50rem;
 	overflow: auto;
-	min-width: 42rem;
+	width: 42rem;
 	max-width: 100%;
 }
 .app-heading {
